<resources>
    <string name="app_name">Lift Scout</string>
    <string name="app_developer">Brandon Hogan</string>
    <string name="app_developer_website">http://www.brandonhogan.com</string>
    <string name="app_designer">Ben Venema</string>
    <string name="app_designer_website">http://www.benvenema.com</string>
    <string name="app_feedback">liftscout@gmail.com</string>
    <string name="app_feedback_subject">Lift Scout - App Feedback</string>
    <string name="app_description">Lift Scout is an app designed to make your time in the gym easier to track your progress and keep you motivated. By tracking your workouts, you are able to visually see your growth</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_unfavourite">Unfavourite</string>
    <string name="date">Date</string>
    <string name="lbs">lbs</string>
    <string name="pound">Pound</string>
    <string name="pounds">Pounds</string>
    <string name="kgs">kgs</string>
    <string name="kilogram">Kilogram</string>
    <string name="kilograms">Kilograms</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="restart">Restart</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="routine">Routine</string>
    <string name="exercise">Exercise</string>
    <string name="weight">Weight</string>
    <string name="photos">Photos</string>
    <string name="reps">Reps</string>
    <string name="rep">Rep</string>
    <string name="sets">Sets</string>
    <string name="set">Set</string>
    <string name="one_week">1 Week</string>
    <string name="one_month">1 Month</string>
    <string name="three_months">3 Months</string>
    <string name="six_months">6 Months</string>
    <string name="one_year">1 Year</string>
    <string name="all">All</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="timer">Timer</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="create">Create</string>
    <string name="leave">Leave</string>
    <string name="rest_timer_seconds">Rest Time (in seconds)</string>
    <string name="settings">Settings</string>
    <string name="exercise_settings">Exercise Settings</string>
    <string name="main_settings">Settings</string>
    <string name="increments_settings">Increments</string>
    <string name="rest_timer_settings">Rest Timer</string>
    <string name="rest_timer">Rest Timer</string>
    <string name="rest_timer_with_name">%s - Rest Timer</string>
    <string name="rest_timer_vibrate">Vibrate</string>
    <string name="rest_timer_sound">Sound</string>
    <string name="rest_timer_auto_start">Auto Start</string>
    <string name="rest_timer_notification_finished">Rest Time Complete</string>
    <string name="charts_category_total_workout">Total Workout</string>
    <string name="charts_category_total_sets">Total Sets</string>
    <string name="charts_category_total_reps">Total Reps</string>
    <string name="charts_empty_exercise">Choose an exercise</string>
    <string name="charts_empty_exercise_no_data">No data for %s.</string>
    <string name="charts_empty_exercise_not_enough_data">Not enough data for given date range</string>
    <string name="charts_select_exercise">Choose Exercise</string>
    <string name="charts_total">Collective Total</string>
    <string name="charts_total_date_range">Date Range</string>
    <string name="charts_category_no_data">No data available. You need to have had at least one workout.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_today">Today</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_routines">Routines</string>
    <string name="nav_exercises">Exercises</string>
    <string name="nav_graphs">Graphs</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_realm">Realm Output</string>
    <string name="title_activity_init">Lift Scout Setup</string>
    <string name="title_frag_settings">Settings</string>
    <string name="title_frag_about">About</string>
    <string name="title_frag_settings_profile">Profile Settings</string>
    <string name="title_frag_settings_display">Display Settings</string>
    <string name="title_frag_settings_home">Home Settings</string>
    <string name="title_frag_settings_notification">Notification Settings</string>
    <string name="title_frag_category_list">Categories</string>
    <string name="title_frag_exercise_list">Exercises</string>
    <string name="title_frag_home">Home</string>
    <string name="intro_slide_one_title">Welcome to Lift Scout!</string>
    <string name="intro_slide_one_description">Thank you for using Lift Scout, an imperative tool both in and outside of the gym!</string>
    <string name="intro_slide_one_description_two">Before you begin, we need to setup a few things to make sure the application is best tailored for your needs.</string>
    <string name="intro_slide_two_title">Settings</string>
    <string name="intro_slide_two_description">You can change these settings anytime later from the settings menu</string>
    <string name="intro_slide_three_title">Default Exercises</string>
    <string name="intro_slide_three_added_description">Exercises have been added</string>
    <string name="intro_slide_three_description">To make things easier for you, we have added many of the most common exercises. You can also add your own later</string>
    <string name="intro_slide_three_button">Remove Exercises</string>
    <string name="intro_slide_three_button_undo">Undo</string>
    <string name="intro_slide_four_title">Themes</string>
    <string name="intro_slide_four_description">Choose from a number of themes to find what best suits your preference</string>
    <string name="intro_slide_five_title">Welcome!</string>
    <string name="intro_slide_five_description">Lift Scout is configured and you\'re ready to begin! Remember, you can change these settings anytime within the settings view.</string>
    <string name="intro_slide_five_description_two">Let the grind begin!</string>
    <string name="frag_init_welcome_title">"Welcome to Lift Scout!"</string>
    <string name="frag_init_welcome_message">"Before we get started, we need to set up a few details."</string>
    <string name="frag_init_name_hint">Name</string>
    <string name="frag_init_age_hint">Age</string>
    <string name="frag_init_weight_hint">Weight</string>
    <string name="frag_init_start_button">"Let's Begin!"</string>
    <string name="dialog_close_app_title">Closing Lift Scout</string>
    <string name="dialog_close_app_message">Are you sure you wish to close Lift Scout?</string>
    <string name="dialog_restarting_app_theme_title">Restarting Lift Scout</string>
    <string name="dialog_restarting_app_theme_message">Changing themes requires the application to restart</string>
    <string name="dialog_set_weight_title">Set Weight</string>
    <string name="dialog_add_category_title">New Category</string>
    <string name="dialog_edit_category_title">Edit Category</string>
    <string name="dialog_add_exercise_title">New Exercise</string>
    <string name="dialog_edit_exercise_title">Edit Exercise</string>
    <string name="dialog_category_remove_title">Deleting %s</string>
    <string name="dialog_category_long_selected">Do you want to edit, or delete %s.  \n\nNote that deleting will not remove existing set data, but will delete all exercises associated to this category.</string>
    <string name="dialog_exercise_long_selected">Do you want to edit, or delete %s.  \n\nNote that deleting will not remove existing set data</string>
    <string name="dialog_exercise_remove_title">Deleting %s</string>
    <string name="dialog_exercise_remove_message">Are you sure you wish to delete %s? \n\nNote that this will not remove existing set data.</string>
    <string name="dialog_rep_remove_title">Deleting Rep</string>
    <string name="dialog_rep_remove_message">Are you sure you wish to delete this rep?</string>
    <string name="dialog_tracker_delete_set_title">Deleting Workout</string>
    <string name="dialog_tracker_delete_set_message">Are you sure you wish to delete this entire set of %s?</string>
    <string name="dialog_tracker_delete_rep_title">Deleting Set</string>
    <string name="dialog_tracker_delete_rep_message">Are you sure you wish to delete this selected set?</string>
    <string name="dialog_edit_history_title">Edit Set</string>
    <string name="dialog_edit_history_message">Are you sure you want to edit this set</string>
    <string name="dialog_tracker_settings_timer_hint">Timer Interval</string>
    <string name="frag_home_first_load_message">"Welcome to Lift Scout %s! This app will become your closest ally in your swole journey."</string>
    <string name="frag_home_welcome_back_message">Welcome back %s!</string>
    <string name="frag_today_weight">Weight</string>
    <string name="frag_today_empty_set_msg">Click here to add a repetition!</string>
    <string name="frag_workout_no_data_message">You have not logged a workout yet</string>
    <string name="frag_workout_no_data_button">Start Your Workout</string>
    <string name="setting_about">About Lift Scout</string>
    <string name="setting_about_description">Check out some information about the app and its developer</string>
    <string name="setting_profile">Profile</string>
    <string name="setting_profile_description">Change your unit of measurement</string>
    <string name="setting_profile_measurement_saved">Unit of Measurement has been updated</string>
    <string name="setting_display">Display</string>
    <string name="setting_display_description">Find a theme that suits you</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_notifications_description">Create, delete and modify existing local push notifications</string>
    <string name="setting_home">Home</string>
    <string name="setting_home_description">Tailor the home screen to fit your needs</string>
    <string name="setting_home_default_spinner_title">Home Screen</string>
    <string name="setting_home_default_spinner_description">Would you prefer to see a calendar or the current day only when the app first starts</string>
    <string name="setting_home_transform_saved">Transition Type has been updated</string>
    <string name="setting_home_screen_saved">Home Screen has been updated</string>
    <string name="setting_today_transformer_spinner_title">Transition Type</string>
    <string name="setting_today_transformer_spinner_description">Change the transition type when swiping from day to day</string>
    <string name="setting_today_weight_title">Enable Weight Tracking</string>
    <string name="setting_today_photo_title">Enable Photo Tracking</string>
    <string name="setting_today_routine_title">Enable Routine Tracking</string>
    <string name="setting_display_theme_spinner_title">Theme</string>
    <string name="setting_profile_measurement_spinner_title">Unit of Measurement</string>
</resources>