<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/frag_init_name_hint"
            android:textSize="@dimen/material_text_size_large"
            android:maxLength="@integer/exercise_name_max_length"
            android:nextFocusForward="@+id/weight"
            android:ems="10" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        style="@style/RobotoTitle"
        android:text="@string/increments_settings"
        android:layout_marginTop="@dimen/dialog_margin_small"
        android:layout_marginBottom="@dimen/dialog_margin_small"/>


    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/increments_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_section_outer_margin"
        android:layout_marginEnd="@dimen/dialog_section_outer_margin"
        android:layout_marginBottom="@dimen/dialog_margin_medium"
        app:ms_text_color="?attr/android:textColorSecondary"
        app:ms_background_color="?attr/colorFill"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        style="@style/RobotoTitle"
        android:text="@string/rest_timer_settings"
        android:layout_marginBottom="@dimen/dialog_margin_small"/>


    <RelativeLayout
        android:layout_height="@dimen/dialog_section_height"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dialog_section_outer_margin"
        android:layout_marginEnd="@dimen/dialog_section_outer_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/rest_timer_vibrate"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/vibrate_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="@dimen/dialog_section_height"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dialog_section_outer_margin"
        android:layout_marginEnd="@dimen/dialog_section_outer_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/rest_timer_sound"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sound_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="@dimen/dialog_section_height"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dialog_section_outer_margin"
        android:layout_marginEnd="@dimen/dialog_section_outer_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/rest_timer_auto_start"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/auto_start_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dialog_section_outer_margin"
        android:layout_marginEnd="@dimen/dialog_section_outer_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/rest_timer_seconds"/>

        <com.brandonhogan.liftscout.utils.controls.NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backGroundColor="?attr/colorFill"
            app:textSize="@dimen/tracker_font_size"
            app:textColor="?attr/android:textColorSecondary"
            app:maxValue="999"
            app:increment="1"
            app:allowDecimal="false"/>

    </LinearLayout>


</LinearLayout>