<?xml version="1.0" encoding="utf-8"?>
<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/intro_padding_bottom">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_settings_white_24dp"
        android:tint="@color/light_theme_text_secondary"
        android:layout_height="@dimen/intro_icon_size"
        android:layout_width="@dimen/intro_icon_size"
        tools:layout_margin="@dimen/intro_margin"
        android:layout_marginTop="@dimen/intro_margin_top_first"
        android:layout_marginStart="@dimen/intro_margin_start"
        android:layout_marginEnd="@dimen/intro_margin_end"
        android:contentDescription="@null"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_margin_top"
        android:layout_marginStart="@dimen/intro_margin_start"
        android:layout_marginEnd="@dimen/intro_margin_end"
        android:gravity="center_horizontal"
        app:layout_parallaxFactor="0.2"
        android:text="@string/intro_slide_two_title"
        style="@style/RobotoHeadline"
        android:textColor="@color/theme_original_accent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="@dimen/intro_margin_start"
        android:layout_marginEnd="@dimen/intro_margin_end"
        android:text="@string/intro_slide_two_description"
        app:layout_parallaxFactor="0.4"
        android:textColor="@color/light_theme_text_secondary"
        android:textSize="@dimen/material_text_size_small" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_parallaxFactor="0.6"
        android:layout_margin="@dimen/intro_margin_scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_home_default_spinner_title"
                android:layout_marginBottom="@dimen/fragment_default_xsmall_margin"
                android:textColor="@color/light_theme_text_secondary"
                android:textSize="@dimen/material_text_size_menu" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/homeDefaultSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_text_color="@color/light_theme_text_secondary"
                app:ms_background_color="@color/light_theme_background"
                android:layout_marginBottom="@dimen/fragment_default_margin"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_profile_measurement_spinner_title"
                android:layout_marginBottom="@dimen/fragment_default_xsmall_margin"
                app:layout_parallaxFactor="0.4"
                android:textColor="@color/light_theme_text_secondary"
                android:textSize="@dimen/material_text_size_menu" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/measurementSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_text_color="@color/light_theme_text_secondary"
                app:ms_background_color="@color/light_theme_background"
                android:layout_marginBottom="@dimen/fragment_default_margin"/>

        </LinearLayout>
    </ScrollView>
</agency.tango.materialintroscreen.parallax.ParallaxLinearLayout>