<?xml version="1.0" encoding="utf-8"?>
<com.brandonhogan.liftscout.utils.controls.BaseFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:windowBackground" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_title_top_margin"
            android:layout_marginBottom="@dimen/home_title_bottom_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="?attr/android:textColorPrimary"
            style="@style/RobotoSubheading"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/tracker_outer_margin"
            android:layout_marginEnd="@dimen/tracker_outer_margin"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/tracker_inner_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/weight"/>

                <com.brandonhogan.liftscout.utils.controls.NumberPicker
                    android:id="@+id/weight_number_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backGroundColor="@color/black_transparent_30"
                    app:textSize="@dimen/tracker_font_size"
                    app:textColor="@color/white"
                    app:maxValue="9999"
                    app:increment="1"
                    app:allowDecimal="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/tracker_inner_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/reps"/>

                <com.brandonhogan.liftscout.utils.controls.NumberPicker
                    android:id="@+id/rep_number_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backGroundColor="@color/black_transparent_30"
                    app:textSize="@dimen/tracker_font_size"
                    app:textColor="@color/white"
                    app:increment="1"
                    app:maxValue="999"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/tracker_button_margin_top"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/first_button"
                android:layout_width="@dimen/tracker_button_width"
                android:layout_height="@dimen/tracker_button_height"
                android:layout_gravity="center_horizontal"
                android:background="?primaryButtonBackground"
                android:backgroundTint="?android:colorAccent"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/tracker_inner_margin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/second_button"
                android:layout_width="@dimen/tracker_button_width"
                android:layout_height="@dimen/tracker_button_height"
                android:layout_gravity="center_horizontal"
                android:background="?primaryButtonBackground"
                android:backgroundTint="@color/black_transparent_30"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/tracker_inner_margin"
                android:text="@string/clear"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/tracker_outer_bottom_margin"
            android:background="@color/divider"
            android:elevation="@dimen/tracker_divider_elevation"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/tracker_list_margin_top_bottom"
            android:layout_marginStart="@dimen/tracker_list_margin_side"
            android:layout_marginEnd="@dimen/tracker_list_margin_side"
            android:layout_marginBottom="@dimen/tracker_list_margin_top_bottom"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="?attr/colorAccent"
            android:scrollbarSize="1dp"
            android:scrollbarStyle="insideOverlay"/>

    </LinearLayout>
</com.brandonhogan.liftscout.utils.controls.BaseFrameLayout>